[package]
name = "pylyzer"
description = "A static code analyzer & language server for Python"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/py2erg",
]

[workspace.package]
version = "0.0.33"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/mtshiba/pylyzer"

[workspace.dependencies]
rustpython-parser = { git = "https://github.com/RustPython/Parser", version = "0.2.0", features = ["all-nodes-with-ranges", "location"] }
rustpython-ast = { git = "https://github.com/RustPython/Parser", version = "0.2.0", features = ["all-nodes-with-ranges", "location"] }
erg_compiler = { git = "https://github.com/erg-lang/erg", features = ["py_compat"], tag = "v0.6.16" }
erg_common = { git = "https://github.com/erg-lang/erg", features = ["py_compat"], tag = "v0.6.16"}

[features]
debug = ["erg_compiler/debug", "erg_common/debug", "py2erg/debug"]
large_thread = ["erg_compiler/large_thread", "erg_common/large_thread"]
pretty = ["erg_compiler/pretty", "erg_common/pretty"]
backtrace = ["erg_common/backtrace"]
experimental = ["erg_compiler/experimental", "erg_common/experimental"]

[dependencies]
erg_compiler = { workspace = true }
erg_common = { workspace = true }
rustpython-parser = { workspace = true }
rustpython-ast = { workspace = true }
py2erg = { version = "0.0.33", path = "./crates/py2erg" }

[lib]
path = "src/lib.rs"
